fix: Remove extra gap in container

--- a/assets/src/blocks/godam-player/style.scss
+++ b/assets/src/blocks/godam-player/style.scss
@@ -119,7 +119,6 @@
 		}
 
 		.image-cta-description {
-			gap: 10px;
 			justify-content: flex-start;
 		}
 
